--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
                         </th>
                     </thead>
                     <tbody id="row-items">
-                        
+                        <tr>
+                            <td>
+                                <input type="number" class="qty form-control border-1 shadow-none" required>
+                            </td>
+                            <td>
+                                <input type="text" class="price form-control border-1 shadow-none">
+                            </td>
+                            <td>
+                                <input type="hidden" class="subtotal form-control border-0 shadow-none" readonly>
+                                <input type="text" class="subtotal-display form-control border-0 shadow-none" readonly>
+                            </td>
+                            <td>
+                                <a class="btn-sm btn btn-danger remove-item">x</a>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
